# RepresentativeLVNetworks

./: .gitignore  LICENSE  Manifest.toml  Project.toml  THIRD_PARTY_LICENSES.csv  problems.md  readme.md
data/: LoadShape2.csv  Manifest.toml  (+4 more)
python-reader/: .dockerignore  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Readme.md  THIRD_PARTY_LICENSES.md  pyproject.toml  readme.md  requirements.txt
python-reader/output/:  Network A Source Vsource.source TransA.html   Network B Source Vsource.source TransB.html   Network C Source Vsource.source TransC.html   Network D Source Vsource.source TransD.html   Network E Source Vsource.source TransE.html   Network F Source Vsource.source TransF.html   Network G Source Vsource.source TransG.html   Network H Source Vsource.source TransH.html   Network I Source Vsource.source TransI.html   Network J Source Vsource.source TransJ.html   Network K Source Vsource.source TransK.html   Network L Source Vsource.source TransL.html   Network M Source Vsource.source TransM.html   Network N Source Vsource.source TransN.html   Network O Source Vsource.source TransO.html   Network P Source Vsource.source TransP.html   Network Q Source Vsource.source TransQ.html   Network R Source Vsource.source TransR.html   Network S Source Vsource.source TransS.html   Network T Source Vsource.source TransT.html   Network U Source Vsource.source TransU.html   Network V Source Vsource.source TransV.html   Network W Source Vsource.source TransW.html
python-reader/scripts/: clean.cmd  clean.sh  export-licenses.cmd  export-licenses.sh  gen-doc.cmd  gen-doc.sh
(+672 files in other folders)
